--- a/src/app/transactions/fee-paid-management/fee-paid-management.component.html
+++ b/src/app/transactions/fee-paid-management/fee-paid-management.component.html
@@ -134,13 +134,22 @@
 
         <div fxFlex="18%">
           <button style="margin-top: 8px; height: 40px;"
-                  (click)="exportTransaction()"
+                  (click)="exportTransactionFeePaid()"
                   color="primary" mat-raised-button>Export
           </button>
         </div>
       </div>
     </mat-expansion-panel>
   </mat-accordion>
+  <mat-card-header>
+    <div class="search-box" >
+      <mat-form-field>
+        <input matInput placeholder="Tìm kiếm ....."
+               midasAfterValueChanged
+               (delayedInput)="applyFilter($event.target.value)">
+      </mat-form-field>
+    </div>
+  </mat-card-header>
   <mat-card-content>
     <table mat-table multiTemplateDataRows class="mat-elevation-z8" [dataSource]="dataSource" matSort>
 
@@ -259,12 +268,32 @@
 
       <ng-container matColumnDef="actions" style="width: 25px;">
         <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
-        <td mat-cell *matCellDef="let transaction">
-          <span style="float: right; width: 15px;"
+        <td mat-cell *matCellDef="let transaction" [ngSwitch]="checkMButton(getDataOfGroupTxnCode(transaction)[0])">
+          <span *ngSwitchCase="true" style="float: right; width: 15px;"
                 [matMenuTriggerData]="getDataOfGroupTxnCode(transaction)[0]"
                 [matMenuTriggerFor]="transactionMenu"
+                matTooltip="Menu"
+                #tooltip="matTooltip"
                 (menuOpened)="menuOpened()" (menuClosed)="menuClosed()"
           ><img src="assets/images/icons/settings.svg"/></span>
+          <span *ngSwitchDefault>
+             <button
+               (click)="addFeeDialog(getDataOfGroupTxnCode(transaction)[0].txnCode)"
+               mat-menu-item
+               matTooltip="Thu, chi tiền"
+               #tooltip="matTooltip"
+               *ngIf="!checkPermissions('ALL_FUNCTIONS') && getDataOfGroupTxnCode(transaction)[0].status !== 'C' && getDataOfGroupTxnCode(transaction)[0].status !== 'V'">
+                <img src="assets/images/icons/hammer.svg"/>
+              </button>
+            <button
+              (click)="viewFeeDialog(getDataOfGroupTxnCode(transaction)[0].txnCode)"
+              mat-menu-item
+              #tooltip="matTooltip"
+              matTooltip="Danh sách đã thu/chi tiền"
+              *ngIf="!checkPermissions('TXNOFFICE_CREATE') && getDataOfGroupTxnCode(transaction)[0].feePaid > 0 && getDataOfGroupTxnCode(transaction)[0].status !== 'V'">
+              <img src="assets/images/icons/completed-task.svg"/>
+            </button>
+          </span>
         </td>
       </ng-container>
       <ng-container matColumnDef="expandedDetail">
@@ -333,11 +362,13 @@
                  style="width: 50px;">
       <button
         (click)="addFeeDialog(txnCode)"
-        mat-menu-item *ngIf="!checkPermissions('ALL_FUNCTIONS')">
+        mat-menu-item *ngIf="!checkPermissions('ALL_FUNCTIONS') && status !== 'C' && status !== 'V'">
         <img src="assets/images/icons/hammer.svg"/>
         &nbsp;Thu, chi tiền
       </button>
-      <button mat-menu-item *ngIf="!checkPermissions('ALL_FUNCTIONS')">
+      <button
+        (click)="viewFeeDialog(txnCode)"
+        mat-menu-item *ngIf="!checkPermissions('TXNOFFICE_CREATE') && feePaid > 0 && status !== 'V'">
         <img src="assets/images/icons/completed-task.svg"/>
         &nbsp;Danh sách đã thu/chi tiền
       </button>
