--- a/src/app/transactions/fee-paid-management/fee-paid-management.component.html
+++ b/src/app/transactions/fee-paid-management/fee-paid-management.component.html
@@ -142,7 +142,7 @@
     </mat-expansion-panel>
   </mat-accordion>
   <mat-card-header>
-    <div class="search-box" >
+    <div class="search-box">
       <mat-form-field>
         <input matInput placeholder="Tìm kiếm ....."
                midasAfterValueChanged
@@ -221,11 +221,13 @@
       </ng-container>
 
       <ng-container matColumnDef="DEAmount">
-        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>Số tiền cần trừ</th>
+        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>Số tiền cấn trừ</th>
         <td mat-cell fxHide fxShow.gt-md *matCellDef="let transaction">
           <ul>
             <li *ngFor="let tra of getDataOfGroupTxnCode(transaction)" [style]="colorOfType(tra.txnPaymentType)">
+              <span *ngIf="tra.txnPaymentType === 'OUT'">
               {{ tra.DEAmount | money}}
+              </span>
             </li>
           </ul>
         </td>
@@ -268,32 +270,14 @@
 
       <ng-container matColumnDef="actions" style="width: 25px;">
         <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
-        <td mat-cell *matCellDef="let transaction" [ngSwitch]="checkMButton(getDataOfGroupTxnCode(transaction)[0])">
-          <span *ngSwitchCase="true" style="float: right; width: 15px;"
-                [matMenuTriggerData]="getDataOfGroupTxnCode(transaction)[0]"
+        <td mat-cell *matCellDef="let transaction">
+          <span style="float: right; width: 15px;"
+                [matMenuTriggerData]="{txnCode:transaction}"
                 [matMenuTriggerFor]="transactionMenu"
                 matTooltip="Menu"
                 #tooltip="matTooltip"
                 (menuOpened)="menuOpened()" (menuClosed)="menuClosed()"
           ><img src="assets/images/icons/settings.svg"/></span>
-          <span *ngSwitchDefault>
-             <button
-               (click)="addFeeDialog(getDataOfGroupTxnCode(transaction)[0].txnCode)"
-               mat-menu-item
-               matTooltip="Thu, chi tiền"
-               #tooltip="matTooltip"
-               *ngIf="!checkPermissions('ALL_FUNCTIONS') && getDataOfGroupTxnCode(transaction)[0].status !== 'C' && getDataOfGroupTxnCode(transaction)[0].status !== 'V'">
-                <img src="assets/images/icons/hammer.svg"/>
-              </button>
-            <button
-              (click)="viewFeeDialog(getDataOfGroupTxnCode(transaction)[0].txnCode)"
-              mat-menu-item
-              #tooltip="matTooltip"
-              matTooltip="Danh sách đã thu/chi tiền"
-              *ngIf="!checkPermissions('TXNOFFICE_CREATE') && getDataOfGroupTxnCode(transaction)[0].feePaid > 0 && getDataOfGroupTxnCode(transaction)[0].status !== 'V'">
-              <img src="assets/images/icons/completed-task.svg"/>
-            </button>
-          </span>
         </td>
       </ng-container>
       <ng-container matColumnDef="expandedDetail">
@@ -356,19 +340,18 @@
   <mat-menu #transactionMenu="matMenu" [overlapTrigger]="false" style="width: 50px;">
     <ng-template matMenuContent
                  let-txnCode="txnCode"
-                 let-customerId="customerId"
-                 let-status="status"
-                 let-feePaid='feePaid'
                  style="width: 50px;">
       <button
         (click)="addFeeDialog(txnCode)"
-        mat-menu-item *ngIf="!checkPermissions('ALL_FUNCTIONS') && status !== 'C' && status !== 'V'">
+        mat-menu-item *ngIf="!checkPermissions('ALL_FUNCTIONS') && checkShowButton(txnCode)"
+      >
         <img src="assets/images/icons/hammer.svg"/>
         &nbsp;Thu, chi tiền
       </button>
       <button
         (click)="viewFeeDialog(txnCode)"
-        mat-menu-item *ngIf="!checkPermissions('TXNOFFICE_CREATE') && feePaid > 0 && status !== 'V'">
+        *ngIf="checkFeePaid(txnCode)"
+        mat-menu-item>
         <img src="assets/images/icons/completed-task.svg"/>
         &nbsp;Danh sách đã thu/chi tiền
       </button>
