add general tab for cross client, open breadcrumn link
add general tab for cross client, open breadcrumn link

--- a/src/app/core/shell/breadcrumb/breadcrumb.component.html
+++ b/src/app/core/shell/breadcrumb/breadcrumb.component.html
@@ -4,9 +4,9 @@
     <span *ngIf="breadcrumbs.length-1 !== 0" class="separator">
       <li *ngFor="let breadcrumb of breadcrumbs; let last = last" class="breadcrumb-label">
         <span *ngIf="!last" class="breadcrumb-link">
-          <!-- <a *ngIf="breadcrumb.url"
+          <a *ngIf="breadcrumb.url"
           [routerLink]="breadcrumb.url"
-          >{{ breadcrumb.label  | translate }}</a> -->
+          >{{ breadcrumb.label  | translate }}</a>
           <a *ngIf="breadcrumb.url">{{ breadcrumb.label  | translate }}</a>
           <span *ngIf="!breadcrumb.url">{{ breadcrumb.label  | translate }}</span>
         </span>
