--- a/src/app/clients/clients-view/clients-view.component.html
+++ b/src/app/clients/clients-view/clients-view.component.html
@@ -114,7 +114,7 @@
 
   <mat-card-content>
     <nav mat-tab-nav-bar class="navigation-tabs">
-      <a *ngIf="!this.showViewClient" mat-tab-link [routerLink]="['./general']" [queryParams]="{ typeViewClient: this.typeViewClient}" routerLinkActive #general="routerLinkActive"
+      <a  mat-tab-link [routerLink]="['./general']" [queryParams]="{ typeViewClient: this.typeViewClient}" routerLinkActive #general="routerLinkActive"
         [active]="general.isActive">
         {{'Client_Component.ViewClient.lblGeneral'|translate}}
       </a>
@@ -134,7 +134,7 @@
         [active]="documents.isActive" *midasHasPermission="'READ_DOCUMENT'">
         {{'Client_Component.ViewClient.lblDocument'|translate}}
       </a>
-      <ng-container *ngIf="!this.showViewClient"  >
+      <ng-container   >
         <li *ngFor="let clientDatatable of clientDatatables">
         <a  mat-tab-link [routerLink]="['./datatables',clientDatatable.registeredTableName]" [queryParams]="{ typeViewClient: this.typeViewClient}"
           routerLinkActive #datatable="routerLinkActive" [active]="datatable.isActive" *midasHasPermission="'READ_' + clientDatatable.registeredTableName">
