fix: select account nhận

--- a/src/app/transactions/dialog/add-fee-dialog/add-fee-dialog.component.html
+++ b/src/app/transactions/dialog/add-fee-dialog/add-fee-dialog.component.html
@@ -74,6 +74,7 @@
           <mat-label>Lựa chọn tài khoản</mat-label>
           <mat-select required formControlName="savingAccountGet">
             <mat-option *ngFor="let type of accountsFee"
+                        [fxHide]="type.hide"
                         [value]="type.id">
               {{type.externalId}} - {{type.balance | money}}
             </mat-option>
