--- a/src/app/clients/client-stepper/client-family-members-step/client-family-members-step.component.html
+++ b/src/app/clients/client-stepper/client-family-members-step/client-family-members-step.component.html
@@ -10,7 +10,9 @@
 
     <mat-accordion>
 
-      <mat-expansion-panel *ngFor="let member of clientFamilyMembers;index as i" class="family-member">
+      <mat-expansion-panel
+        expanded="true"
+        *ngFor="let member of clientFamilyMembers;index as i" class="family-member">
 
         <mat-expansion-panel-header>
 
