--- a/src/app/transactions/manage-transaction/manage-transaction.component.html
+++ b/src/app/transactions/manage-transaction/manage-transaction.component.html
@@ -64,7 +64,9 @@
   </mat-card-content>
   <mat-accordion>
 
-    <mat-expansion-panel (opened)="panelOpenState = true"
+    <mat-expansion-panel
+      expanded="true"
+      (opened)="panelOpenState = true"
                          (closed)="panelOpenState = false">
       <mat-expansion-panel-header>
         <mat-panel-title>
