--- a/src/app/clients/clients-view/address-tab/address-tab.component.html
+++ b/src/app/clients/clients-view/address-tab/address-tab.component.html
@@ -10,7 +10,9 @@
 
   <mat-accordion>
 
-    <mat-expansion-panel *ngFor="let address of clientAddressData;index as i" class="address">
+    <mat-expansion-panel
+      expanded="true"
+      *ngFor="let address of clientAddressData;index as i" class="address">
 
       <mat-expansion-panel-header>
         <mat-panel-title>
@@ -31,7 +33,7 @@
       </div>
 
       <p>
-        
+
         <span *ngIf="isFieldEnabled('addressLine1')">{{'Client_Component.ClientStepper.AddressStep.labelAddressLine1' |translate}} : {{address.addressLine1}}<br /></span>
         <span *ngIf="isFieldEnabled('addressLine2')">{{'Client_Component.ClientStepper.AddressStep.labelAddressLine2' |translate}} : {{address.addressLine2}}<br /></span>
         <span *ngIf="isFieldEnabled('addressLine3')">{{'Client_Component.ClientStepper.AddressStep.labelAddressLine3' |translate}} : {{address.addressLine3}}<br /></span>
