--- a/src/app/home/rollterm-list/rollterm-list.component.html
+++ b/src/app/home/rollterm-list/rollterm-list.component.html
@@ -11,9 +11,9 @@
     </mat-card-header>
 
     <mat-card-content >
-      
+
       <mat-accordion>
-        <mat-expansion-panel>
+        <mat-expansion-panel expanded="true">
             <mat-expansion-panel-header>
                 <mat-panel-title>
                     Xem chi tiết
@@ -44,7 +44,7 @@
                             fxFlex="40" class="text-right">0đ</span></p>
                 </mat-expansion-panel>
             </div>
-            
+
 
         </mat-expansion-panel>
 
