--- a/src/app/self-service/app-configuration/app-configuration.component.html
+++ b/src/app/self-service/app-configuration/app-configuration.component.html
@@ -2,7 +2,7 @@
 
   <mat-accordion>
 
-    <mat-expansion-panel>
+    <mat-expansion-panel expanded="true">
 
       <mat-expansion-panel-header>
         <mat-panel-title>
