--- a/src/app/transactions/fee-paid-management/fee-paid-management.component.html
+++ b/src/app/transactions/fee-paid-management/fee-paid-management.component.html
@@ -57,7 +57,9 @@
   </mat-card-content>
   <mat-accordion>
 
-    <mat-expansion-panel (opened)="panelOpenState = true"
+    <mat-expansion-panel
+      expanded="true"
+      (opened)="panelOpenState = true"
                          (closed)="panelOpenState = false">
       <mat-expansion-panel-header>
         <mat-panel-title>
