--- a/src/app/core/shell/toolbar/toolbar.component.html
+++ b/src/app/core/shell/toolbar/toolbar.component.html
@@ -64,7 +64,7 @@
   <button mat-menu-item routerLink="/groups">{{'Toolbar_Component.lblGroup'|translate}}</button>
   <button mat-menu-item routerLink="/centers">{{'Toolbar_Component.lblCenter'|translate}}</button>
   <button mat-menu-item routerLink="/terminals">{{'Toolbar_Component.labelTerminals'|translate}}</button>
-  <button mat-menu-item routerLink="/clients/balance-accounts">{{'Quản lý số dư khách hàng'|translate}}</button>
+  <button mat-menu-item routerLink="/balance-accounts">{{'Quản lý số dư khách hàng'|translate}}</button>
   <span fxHide.lg>
     <button mat-menu-item [routerLink]="['/accounting']">{{'Toolbar_Component.lblAccounting'|translate}}</button>
     <button mat-menu-item [matMenuTriggerFor]="reportsMenu">{{'Toolbar_Component.lblReport'|translate}}</button>
