add: total account

--- a/src/app/clients/balance-account-client/balance-account-client.component.html
+++ b/src/app/clients/balance-account-client/balance-account-client.component.html
@@ -14,8 +14,14 @@
           </mat-option>
         </mat-select>
       </mat-form-field>
-    </div>
-    <div class="container" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
+      <div>
+        <div style="margin-top: 15px;" fxLayout="row">
+          <img src="assets/images/icons/account.svg">
+          <div style="margin: 5px; margin-top: 20px;">
+            <span>Tổng cộng: &nbsp;</span> {{dataSource.length}}
+          </div>
+        </div>
+      </div>
     </div>
   </mat-card-content>
   <mat-card-content>
