add: total account

--- a/src/app/accounting/balance-account-client/balance-account-client.component.html
+++ b/src/app/accounting/balance-account-client/balance-account-client.component.html
@@ -16,7 +16,7 @@
       </mat-form-field>
       <div>
         <div style="margin-top: 15px;" fxLayout="row">
-          <img src="assets/images/icons/account.svg">
+          <img src="../../../assets/images/icons/account.svg">
           <div style="margin: 5px; margin-top: 20px;">
             <span>Tổng cộng: &nbsp;</span> {{dataSource.length}}
           </div>
